@@ -3591,6 +3591,18 @@ SELECT CASE as CONST id
   IF valid_plotsprite(retvals(0)) THEN
    script_start_waiting(retvals(0))
   END IF
+ CASE 576'--hide virtual gamepad
+  gam.script_hide_virtual_gamepad = YES
+  gam.script_show_virtual_gamepad = NO
+  update_virtual_gamepad_display()
+ CASE 577'--show virtual gamepad
+  gam.script_hide_virtual_gamepad = NO
+  gam.script_show_virtual_gamepad = YES
+  update_virtual_gamepad_display()
+ CASE 578'--auto virtual gamepad
+  gam.script_hide_virtual_gamepad = NO
+  gam.script_show_virtual_gamepad = NO
+  update_virtual_gamepad_display()
 
  CASE ELSE
   RETURN NO
